cabal-version:      2.4

name:               waspls
version:            0.1.0.0
description:        Please see the README on GitHub at <https://github.com/wasp-lang/wasp/waspls#readme>
homepage:           https://github.com/wasp-lang/wasp/waspls#readme
bug-reports:        https://github.com/wasp-lang/wasp/issues
author:             Wasp Team
maintainer:         team@wasp-lang.dev
copyright:          Wasp, Inc.
license:            MIT
license-file:       LICENSE
extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/wasp-lang/wasp

common common-all
  default-language: Haskell2010
  ghc-options:
    -Wall
    -optP-Wno-nonportable-include-path
    -fwrite-ide-info -hiedir=.hie
  default-extensions:
    OverloadedStrings
    ScopedTypeVariables
    FlexibleContexts
    MultiParamTypeClasses
    DisambiguateRecordFields

common common-exe
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N

library
  import:           common-all
  exposed-modules:
    Wasp.LSP.Server
    Wasp.LSP.State
    Wasp.LSP.Handlers
  other-modules:
    Paths_waspls
  hs-source-dirs:
    src
  build-depends:
    , base ^>=4.14.3.0
    , lsp ^>=1.4.0.0
    , lsp-types ^>=1.4.0.1
    , containers ^>=0.6.5.1
    , mtl ^>=2.2.2
    , transformers ^>=0.5.6.2
    , text ^>=1.2.4.1
    , data-default ^>=0.7.1.1
    , hslogger ^>=1.3.1.0
    , aeson ^>=1.5.6
    , lens ^>=5.1
    , waspc

executable waspls
  import:           common-all, common-exe
  main-is:          Main.hs
  other-modules:
    Paths_waspls
  hs-source-dirs:
    exe
  build-depends:
    , base ^>=4.14.3.0
    , optparse-applicative ^>=0.17.0.0
    , waspls
  default-language: Haskell2010
